styles.css
body {
  background: linear-gradient(to bottom, #f0f4f8, #ded5fc);
  min-height: 100vh;
}

.container {
  max-width: 860px;
  margin: 0 auto;
  background-color: #f7f5fa;
  padding: 40px 32px;
  border-radius: 15px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.form-title {
  text-align: center;
  color: #333;
  margin-bottom: 30px;
  font-family: "sora", sans-serif;
}

.form-description {
  text-align: center;
  color: #666;
  margin-bottom: 60px;
  font-family: "Inter", sans-serif;
}

hr {
  border: none;
  border-top: 1px solid #eac7b3;
  margin: 30px 0;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

.form-section1 {
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin-bottom: 40px;
  max-width: 500px;
  margin: 0 auto;
  text-align: left;
  font-family: "Inter", sans-serif;
  color: #666;
}

.form-section1 label {
  display: block;
  font-weight: 600;
  margin-bottom: 6px;
  color: #333;
}

.form-section1 input:focus {
  outline: none;
  border-color: #a1c4fd;
}

.form-section1 input {
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 5px;
  font-size: 0.8em;
  cursor: pointer;
}

.form-question {
  margin-bottom: 20px;
  font-family: "Inter", sans-serif;
  color: #333;
  font-size: 1.2em;
  font-weight: lighter;
  text-align: center;
  margin-top: 60px;
  margin-bottom: 40px;
}

.form-section2,
.form-section3,
.form-section4 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-self: center;
  gap: 20px;
  max-width: 400px;
  margin: 0 auto;
  color: #666;
}

.form-section2 label,
.form-section3 label,
.form-section4 label {
  display: flex;
  align-items: center;
  gap: 10px;
  font-family: "Inter", sans-serif;
  margin-bottom: 10px;
}

input[type="radio"] {
  width: 15px;
  height: 15px;
  cursor: pointer;
}

.area-question {
  margin-top: 60px;
  margin-bottom: 20px;
  font-family: "Inter", sans-serif;
  color: #333;
  font-size: 1.2em;
  font-weight: lighter;
  text-align: center;
}

textarea {
  width: 100%;
  max-width: 500px;
  height: 120px;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 8px;
  font-size: 0.95em;
  font-family: "Inter", sans-serif;
  display: block;
  margin: 0 auto;
  resize: vertical;
}

textarea:focus {
  outline: none;
  border-color: #a1c4fd;
}

.form-cta {
  text-align: center;
  color: #666;
  margin-bottom: 30px;
  margin-top: 60px;
  font-family: "Inter", sans-serif;
}

.submit-button {
  display: block;
  margin: 20px auto;
  padding: 12px 24px;
  background: linear-gradient(to right, #ffc3a0, #ffafbd);
  color: #fff;
  border: none;
  border-radius: 10px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  transition: all 0.3s ease;
}

.submit-button:hover {
  transform: translateY(-2px);
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
}

.submit-button:active {
  transform: translateY(-1px);
  box-shadow: none;
}

@media (max-width: 600px) {
  .form-section2 {
    grid-template-columns: 1fr;
    justify-items: center;
  }
}

